--- a/playbook.yml
+++ b/playbook.yml
@@ -4,8 +4,7 @@ site:
 content:
   sources:
     - url: .
-      branches:
-        - main
+      branches: HEAD
       start_paths:
         - book
 
