use module descriptor yml to assemble nav to work around the double include problem

--- a/book/antora.yml
+++ b/book/antora.yml
@@ -3,4 +3,5 @@ name: book
 title: Book
 version: latest
 nav:
-  - modules/ROOT/nav.adoc
+  - modules/chapter-1/nav.adoc
+  - modules/chapter-2/nav.adoc
