working antora navigation extension with bug demo.
Next is trying to make it work now that we have control over how the nav is built.

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,3 +1,7 @@
+antora:
+  extensions:
+    - ./extensions/navigator-extension
+
 site:
   title: My book
   start_page: book::index.adoc
@@ -12,3 +16,4 @@ ui:
   bundle:
     url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
+  supplemental_files: ./supplemental-ui
